welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:22: error: type mismatch;
 found   : Unit
 required: Int
        if (speed>=81) {
        ^caughtSpeeding:15: error: type mismatch;
 found   : Unit
 required: Int
  if (isBirthday==false) {
  ^